--- a/package.json
+++ b/package.json
@@ -181,6 +181,20 @@
   },
   "resolutions": {
     "d3-graphviz": "^5.1.0",
-    "jquery": "^3.6.4"
+    "jquery": "^3.6.4",
+    "braces": ">2.3.1",
+    "d3-color": "^3.1.0",
+    "glob-parent": ">5.1.2",
+    "got": ">12.1.0",
+    "json5": ">2.2.2",
+    "loader-utils": "^1.4.1",
+    "mem": ">4.0.0",
+    "nth-check": "^2.0.1",
+    "postcss": ">8.2.13",
+    "tough-cookie": "^4.1.3",
+    "semver": "^7.5.2",
+    "trim": ">0.0.3",
+    "trim-newlines": ">4.0.1",
+    "yargs-parser": ">18.1.1"
   }
 }
